--- a/internship.html
+++ b/internship.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/certainaffinity/job/ouSy9fwN'>Certain Affinity, Inc. Careers - 3D Art Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
@@ -50,7 +50,7 @@
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692432827-internship-human-resources'>Bosch Group Internship_Human Resources | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://occasionbrands.applytojob.com/apply/fuZVNTzYQW/Quality-Assurance-Fall-Internship'>Quality Assurance (Fall Internship) - Occasion Brands - Career Page</a></h5> 
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">California, United States New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692430093-internship-in-engineering'>Bosch Group Internship in Engineering | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692430093-internship-in-engineering'>Bosch Group Internship in Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nutanix/job/oEADafwL'>Nutanix Careers - Systems Reliability Engineer - Summer Internship 2019-2020</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nutanix/job/oEADafwL'>Nutanix Careers - Systems Reliability Engineer - Summer Internship 2019-2020</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rubensteintech.applytojob.com/apply/85jDr7K5qi/Web-Software-Engineering-Intern-Fall-2019'>Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page</a></h5> 
+<h5><a href='http://rubensteintech.applytojob.com/apply/85jDr7K5qi/Web-Software-Engineering-Intern-Fall-2019'>Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -286,7 +286,7 @@ to?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Analyst / Data Scientist | Internship | Tech-Savvy|. Indore, Madhya Pradesh | 
 Full time. Apply Now. Job role: As a data analyst, you will be responsible for?...</p>
@@ -329,7 +329,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://schumacher.recruitee.com/o/showroom-intern-summerfall-2019'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schumacher.recruitee.com/o/showroom-intern-summerfall-2019'>
       Showroom Intern - Summer/Fall 2019 - F. Schumacher & Co.
     </a></h5> 
 <p><span class="badge badge-light">Boston Boston</span></p>
@@ -344,7 +344,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -366,11 +366,11 @@ every?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... ... Canada, Montreal; Business Analyst and Data Modeler for Airline Standards, 
 Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
@@ -407,7 +407,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 accuracy, as well as utilizing tools and processes from data sources to ensure 
 quality?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sephora-sea.workable.com/j/3BACB19433'>Sephora SEA - Jobs: Training Intern (6 months) - Apply online</a></h5> 
+<h5><a href='https://sephora-sea.workable.com/j/3BACB19433'>Sephora SEA - Jobs: Training Intern (6 months) - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -445,7 +445,7 @@ quality?...</p>
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voltacharging/6362cdc9-d254-48ec-8c68-b336b1c0e8e2'>Volta Charging - Business Operations Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/voltacharging/6362cdc9-d254-48ec-8c68-b336b1c0e8e2'>Volta Charging - Business Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -473,7 +473,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
